# tsp_ffi

./: .gitattributes  .gitignore  .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
examples/dart/: pubspec.yaml
examples/flutter/: README.md  pubspec.yaml
examples/flutter/android/: .uuid
examples/flutter/android/app/: build.gradle.kts
examples/flutter/android/app/src/main/: AndroidManifest.xml
examples/flutter/android/app/src/main/kotlin/com/example/tsp_ffi_example/: MainActivity.kt
examples/flutter/android/gradle/: .uuid
examples/flutter/android/gradle/wrapper/: .uuid
examples/flutter/lib/: main.dart
examples/flutter/linux/: CMakeLists.txt
examples/flutter/linux/runner/: my_application.cc
examples/flutter/test/: widget_test.dart
lib/: tsp_ffi.dart  tsp_ffi_bindings_generated.dart
src/: CMakeLists.txt  build_android.sh  gurobi_stubs.cc  tsp_ffi.cc  tsp_ffi.h
